--- a/stylus/require/banner--searchbar.styl
+++ b/stylus/require/banner--searchbar.styl
@@ -16,6 +16,7 @@
 		
 		input
 			border none
+			border-radius 0
 			
 			&[type="search"]
 				width 97%
@@ -39,4 +40,9 @@
 					
 @media all and (max-width:$mobile)
 	.wt_banner--searchbar
-		padding 12rem 3rem		
+		padding 12rem 3rem
+		
+		form
+			input
+				-webkit-appearance none
+				-webkit-border-radius 0	
