--- a/stylus/require/footer.styl
+++ b/stylus/require/footer.styl
@@ -20,7 +20,7 @@
 				font-size 1.6rem
 		
 		input
-			border 0
+			border-radius 0
 			
 			&[type="email"]
 				width 300px
@@ -116,6 +116,9 @@
 				display block
 			
 			input
+			  -webkit-appearance none
+			  -webkit-border-radius 0
+
 				&[type="email"]
 					width 100%
 					text-align center
